--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="images/link.svg" />
     <link rel="stylesheet" href="CSS/bootstrap-icons.min.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/all.min.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/responsive.css">
 </head>
@@ -214,7 +215,7 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
-                        <img src="images/movies.png" class="rounded-3 w-100 project-img" alt="">
+                        <img src="images/profile.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
                             <div class="d-flex">
