--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                             <p class="my-3 col-md-8 m-auto"><span class="fs-5 px-1 fw-bold home-span">Front-end Developer,</span> with deep knowlage in wep Development
                                 and its technologies, to deliver best projects and high-quality results.
                             </p>
-                            <button type="button" class="btn btn-second my-3 mx-2 btn-info">Resume
+                            <button type="button" class="btn btn-second my-3 mx-2">Resume
                                 <i class="fa-solid ms-2 fa-up-right-from-square"></i>
                             </button>
                             <a href="#contact">
-                                <button type="button" class="btn btn-second my-3 mx-2 btn-info">Contact</button>
+                                <button type="button" class="btn btn-second my-3 mx-2">Contact</button>
                             </a>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                     <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
-                        <img src="images/profile.png" class="rounded-3 w-100 project-img" alt="">
+                        <img class="rounded-3 profile-project w-100 project-img" src="images/profile-light.png" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
                             <div class="d-flex">
