--- a/index.html
+++ b/index.html
@@ -63,18 +63,20 @@
 
             <div class="container  home mt-5">
                 <div class="row d-flex flex-md-nowrap align-items-center justify-content-center mx-5 my-5  ">
-                    <div class="col-lg-7 col-md-7 mb-5 col-12 text-center d-flex justify-content-center home-content mt-5">
+                    <div
+                        class="col-lg-7 col-md-7 mb-5 col-12 text-center d-flex justify-content-center home-content mt-5">
                         <div class="title">
                             <span class="fs-2">Hi, <span class="secondery-text ">I'm</span></span>
                             <h1 class="gx-0 ">MOSTAFA MAHMOUD</h1>
-                            <p class="my-3 col-md-8 m-auto"><span class="fs-5 px-1 fw-bold home-span">Front-end Developer,</span> with deep knowlage in wep Development
+                            <p class="my-3 col-md-8 m-auto"><span class="fs-5 px-1 fw-bold home-span">Front-end
+                                    Developer,</span> with deep knowlage in wep Development
                                 and its technologies, to deliver best projects and high-quality results.
                             </p>
-                            <button type="button" class="btn btn-second my-3 mx-2">Resume
+                            <button type="button" class="btn  btn-second my-3 mx-2">Resume
                                 <i class="fa-solid ms-2 fa-up-right-from-square"></i>
                             </button>
                             <a href="#contact">
-                                <button type="button" class="btn btn-second my-3 mx-2">Contact</button>
+                                <button type="button" class="btn  btn-second my-3 mx-2">Contact</button>
                             </a>
                         </div>
                     </div>
@@ -297,7 +299,8 @@
                         <div class="row justify-content-evenly align-items-center mt-5">
                             <div class="col-md-5 col-lg-5 col-10 contact-cols offset-1">
                                 <div class="E-mail d-flex my-4 align-items-start ">
-                                    <i class="fa-solid contact-ico p-3 mt-1 secondery-ico rounded-5 fs-2 fa-envelope"></i>
+                                    <i
+                                        class="fa-solid contact-ico p-3 mt-1 secondery-ico rounded-5 fs-2 fa-envelope"></i>
                                     <div class="px-3 py-0">
                                         <h3>E-mail</h3>
                                         <a href="mailto:m2ostafa2000@gmail.com" class="email-col">
@@ -310,7 +313,8 @@
                                     <i class="fa-solid contact-ico p-3 mt-1 secondery-ico rounded-5 fs-2 fa-phone"></i>
                                     <div class="px-3 py-0">
                                         <h3>Phone</h3>
-                                        <p class="email-col"> +201206856251 <span class="px-1">&</span> +201554155074 </p>
+                                        <p class="email-col"> +201206856251 <span class="px-1">&</span> +201554155074
+                                        </p>
                                     </div>
                                 </div>
                                 <!-- <form>
