--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                             <span class="fs-2">Hi, <span class="secondery-text ">I'm</span></span>
                             <h1 class="gx-0 ">MOSTAFA MAHMOUD</h1>
                             <p class="my-3 col-md-8 m-auto"><span class="fs-5 px-1 fw-bold home-span">Front-end
-                                    Developer,</span> with deep knowlage in wep Development
+                                    Developer,</span> with knowlage in wep Development
                                 and its technologies, to deliver best projects and high-quality results.
                             </p>
-                            <button type="button" class="btn  btn-second my-3 mx-2">Resume
+                            <button type="button" class="btn  btn-second btn-light my-3 mx-2">Resume
                                 <i class="fa-solid ms-2 fa-up-right-from-square"></i>
                             </button>
                             <a href="#contact">
-                                <button type="button" class="btn  btn-second my-3 mx-2">Contact</button>
+                                <button type="button" class="btn  btn-second btn-light my-3 mx-2">Contact</button>
                             </a>
                         </div>
                     </div>
