--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
                                     Developer,</span> with knowlage in wep Development
                                 and its technologies, to deliver best projects and high-quality results.
                             </p>
-                            <button type="button" class="btn  btn-second btn-light my-3 mx-2">Resume
-                                <i class="fa-solid ms-2 fa-up-right-from-square"></i>
-                            </button>
+                            <a href="Mostafa_Mahmoud_Resume.pdf" target="_blank" download>
+                                <button type="button" class="btn  btn-second btn-light my-3 mx-2">Resume
+                                    <i class="fa-solid ms-2 fa-up-right-from-square"></i>
+                                </button>
+                            </a>
                             <a href="#contact">
                                 <button type="button" class="btn  btn-second btn-light my-3 mx-2">Contact</button>
                             </a>
@@ -234,7 +236,7 @@
                         </div>
                     </div>
                     <div class="project-contain   my-3  rounded-3 col-lg-4 col-md-6 col-10 ">
-                        <img src="images/movies.png" class="rounded-3 w-100 project-img" alt="">
+                        <img src="images/Bookmarker.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
                             <div class="d-flex">
@@ -243,7 +245,7 @@
                                 <h7 class="bg-dark rounded-3 px-2 py-1 my-2 w-50 mx-1 m-auto">JS</h7>
                             </div>
                             <h4 class="my-2">BookMarker</h4>
-                            <a href="" target="_blank">
+                            <a href="https://bookmarker-green.vercel.app/" target="_blank">
                                 <button class="btn  border-0">Show Demo
                                     <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
                                 </button>
