--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                             <p class="fs-6 py-3 ">Graduated from faculty of Computers and Artificial intelligence HU
                                 in June 2023, with deep knowledge in Computer Science and related fileds,
                                 and I specialized in Web Design and Development, After graduation I took
-                                certified Front-end course to learn web design technologies and skills
-                                , and now I'm taking UI/UX design course and learning more skills to
+                                certified Front-end course to learn web technologies and skills
+                                , and I'm starting UI/UX design course soon and learning more skills to
                                 improve myself and work better.
                             </p>
                             <span class="fs-3">Education</span>
