--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <span class="fs-2">Hi, <span class="secondery-text ">I'm</span></span>
                             <h1 class="gx-0 ">MOSTAFA MAHMOUD</h1>
                             <p class="my-3 col-md-8 m-auto"><span class="fs-5 px-1 fw-bold home-span">Front-end
-                                    Developer,</span> with knowlage in wep Development
+                                    Developer,</span> with knowledge in Web Development
                                 and its technologies, to deliver best projects and high-quality results.
                             </p>
                             <a href="Mostafa_Mahmoud_Resume.pdf" target="_blank" download>
