--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="services col-md-7 col-sm-6 mt-5 col-12 text-center d-flex flex-wrap mt-0">
                         <div class="service-contain h-100  p-4 my-3 m-auto rounded-3 col-lg-5 col-md-10 col-12 ">
                             <i class="fa secondery-text mb-2 fa-code fs-3"></i>
-                            <h4 class="mb-4">Wep Development</h4>
+                            <h4 class="mb-4">Web Development</h4>
                             <p class="mb-0">
                                 I make sure to deliver the best Design with the best Performance
                             </p>
