--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                             </div>
                         </div>
                         <div class="media d-flex my-5 flex-column align-items-center justify-content-center ">
-                            <h2>Media</h2>
+                            <h2>Social Media</h2>
                             <div class="px-4 my-2">
                                 <a href="https://www.facebook.com/profile.php?id=100007766405910&ref=xav_ig_profile_web"
                                     class="email-col" target="_blank"><i
