--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="page-2" id="about">
-            <div class="container h-100  about offset-md-1">
+            <div class="container h-100 about">
                 <div class="title position-relative  d-flex justify-content-center align-items-center mb-5">
                     <h2> About</h2>
                     <h3 class=" position-absolute mt-3 fs-1"> About <span class="secondery-text"> Me </span></h3>
@@ -298,7 +298,7 @@
                             <h3 class="position-absolute mt-3 fs-1">Contact <span class="secondery-text"> Me </span>
                             </h3>
                         </div>
-                        <div class="row justify-content-evenly align-items-center mt-5">
+                        <div class="row justify-content-evenly align-items-center ms-md-5 mt-5">
                             <div class="col-md-5 col-lg-5 col-10 contact-cols offset-1">
                                 <div class="E-mail d-flex my-4 align-items-start ">
                                     <i
