--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <i class="fa-solid secondery-text mb-1 fa-display fs-3"></i>
                             <h4 class="mb-4">Responsive Design</h4>
                             <p class="mb-0">
-                                Designing websites that work highly efficiently on any screen size
+                                Designing websites that work highly efficient on any screen size
                             </p>
                         </div>
                     </div>
