--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="row d-flex all-services align-items-center justify-content-center m-5 mt-2  ">
                     <div class="title position-relative  d-flex justify-content-center align-items-center ">
                         <h2>Services</h2>
-                        <h3 class=" position-absolute fs-1">Services</h3>
+                        <h3 class=" position-absolute fs-1 mt-3">Services</h3>
                     </div>
                     <div class="services col-md-7 col-sm-6 mt-5 col-12 text-center d-flex flex-wrap mt-0">
                         <div class="service-contain h-100  p-4 my-3 m-auto rounded-3 col-lg-5 col-md-10 col-12 ">
