--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
                     <div class="col-md-8 col-md-8 mt-5 col-12 text-start d-flex justify-content-center">
                         <div class="title my-1 col-lg-8 col-md-10 col-12 text-center m-auto">
                             <!-- <span class="fs-3">Brief</span> -->
-                            <p class="fs-6 py-3 ">Graduated from faculty of Computers and Artificial intelligence HU
+                            <p class="fs-6 py-3 ">Graduated from faculty of Computers and Artificial intelligence Helwan University
                                 in June 2023, with deep knowledge in Computer Science and related fields,
-                                and I specialized in Web Design and Development, After graduation I took
-                                certified Front-end course to learn web technologies and skills
+                                and I specialized in Web Development, After graduation I took
+                                certified Frontend React.js course, learned Next.js aswell
                                 , and I'm starting to learn UI/UX design and learn more skills to
                                 improve myself and work better.
                             </p>
