--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                                 in June 2023, with deep knowledge in Computer Science and related fields,
                                 and I specialized in Web Development, After graduation I took
                                 certified Frontend React.js course, learned Next.js as well
-                                , and I'm starting to learn UI/UX design and learn more skills to
-                                improve myself and work better.
+                                , and I'm learning more skills to improve myself and work better.
                             </p>
                             <span class="fs-3">Education</span>
                             <p class="fs-5"> Bachelor's Degree in Computer Science from Helwan University</p>
