--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Mostafa's Profile</title>
+    <title>Mostafa Mahmoud </title>
     <meta name="author" content="Mostafa" />
     <meta name="description" content="Profile" />
     <meta charset="UTF-8">
