--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 <li class="skill-item p-1">CSS</li>
                                 <li class="skill-item p-1">Bootstrap</li>
                                 <li class="skill-item p-1">JavaScript</li>
-                                <li class="skill-item p-1">jQuery</li>
+                                <li class="skill-item p-1">Redux</li>
                             </ul>
                             <ul class="list ">
                                 <li class="skill-item p-1">React.js</li>
@@ -247,8 +247,21 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project-contain  my-3  rounded-3 col-lg-4 col-md-6 col-10 ">
-                        <img src="images/Bookmarker.png" class="rounded-3 w-100 project-img" alt="">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                        <img src="images/ToDo-List.png" class="rounded-3 w-100 project-img" alt="">
+                        <div class="content-contain rounded-3"></div>
+                        <div class="content w-100  text-center">
+                            <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
+                            <h4 class="my-2">ToDo List</h4>
+                            <a href="https://todo-list-app-eight-omega.vercel.app/" target="_blank">
+                                <button class="btn border-0">Show Demo
+                                    <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                        <img src="images/Bookmarker2.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
                             <div class="d-flex">
@@ -264,7 +277,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project-contain  my-3  rounded-3 col-lg-4 col-md-6 col-10 ">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
                         <img src="images/weather.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
