--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                                     Developer,</span> with knowledge in Web Development
                                 and its technologies, to deliver best projects and high-quality results.
                             </p>
-                            <a href="Mostafa_Mahmoud_Resume.pdf" target="_blank" download>
+                            <a href="Mostafa_Mahmoud.pdf" target="_blank" rel='noopener noreferrer' download>
                                 <button type="button" class="btn  btn-second btn-light my-3 mx-2">Resume
                                     <i class="fa-solid ms-2 fa-up-right-from-square"></i>
                                 </button>
                             </a>
                             <a href="#contact">
-                                <button type="button" class="btn  btn-second btn-light my-3 mx-2">Contact</button>
+                                <button type="button" class="btn btn-second btn-light my-3 mx-2">Contact</button>
                             </a>
                         </div>
                     </div>
@@ -104,13 +104,13 @@
                 </div>
                 <div class="social text-center mt-0 gy-0">
                     <div class="px-3 my-2">
-                        <a href="https://github.com/Mostafa3ta" class="email-col" target="_blank"><i
+                        <a href="https://github.com/Mostafa3ta" class="email-col" target="_blank" rel='noopener noreferrer'><i
                                 class="fa-brands secondery-text secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-github"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/mostafa-mahmoud-33a1542b0" class="email-col" target="_blank"><i
+                        <a href="https://www.linkedin.com/in/mostafa-mahmoud-33a1542b0" class="email-col" target="_blank" rel='noopener noreferrer'><i
                                 class="fa-brands secondery-text secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-linkedin-in"></i>
                         </a>
-                        <a href="https://wa.me/+201206856251" class="email-col" target="_blank"><i
+                        <a href="https://wa.me/+201206856251" class="email-col" target="_blank" rel='noopener noreferrer'><i
                                 class="fa-brands secondery-text secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-whatsapp"></i>
                         </a>
                     </div>
@@ -210,7 +210,7 @@
                         <div class="content w-100  text-center">
                             <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
                             <h4 class="my-2">E-commerce</h4>
-                            <a href="https://e-commerce-react-js-gamma.vercel.app/" target="_blank">
+                            <a href="https://e-commerce-react-js-gamma.vercel.app/" target="_blank" rel='noopener noreferrer'>
                                 <button class="btn border-0">Show Demo
                                     <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
                                 </button>
@@ -366,21 +366,21 @@
                             <h2>Social Media</h2>
                             <div class="px-4 my-2">
                                 <a href="https://www.facebook.com/profile.php?id=100007766405910&ref=xav_ig_profile_web"
-                                    class="email-col" target="_blank"><i
+                                    class="email-col" target="_blank" rel='noopener noreferrer'><i
                                         class="fa-brands  secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-facebook"></i>
                                 </a>
                                 <a href="https://www.instagram.com/mostafa3ta_106?igsh=bXVoMm9yazcwdmlo"
-                                    class="email-col" target="_blank"><i
+                                    class="email-col" target="_blank" rel='noopener noreferrer'><i
                                         class="fa-brands  secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-instagram"></i>
                                 </a>
-                                <a href="https://wa.me/+201206856251" class="email-col" target="_blank"><i
+                                <a href="https://wa.me/+201206856251" class="email-col" target="_blank" rel='noopener noreferrer'><i
                                         class="fa-brands  secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-whatsapp"></i>
                                 </a>
-                                <a href="https://github.com/Mostafa3ta" class="email-col" target="_blank"><i
+                                <a href="https://github.com/Mostafa3ta" class="email-col" target="_blank" rel='noopener noreferrer'><i
                                         class="fa-brands  secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-github"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/in/mostafa-mahmoud-33a1542b0" class="email-col"
-                                    target="_blank"><i
+                                    target="_blank" rel='noopener noreferrer'><i
                                         class="fa-brands  secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-linkedin-in"></i>
                                 </a>
                             </div>
