--- a/index.html
+++ b/index.html
@@ -31,50 +31,54 @@
         </div>
     </div>
 
-    <section class="side-nav d-flex align-items-center">
-        <div class="menu rounded-4 ">
-            <ul class="navbar-nav ">
-                <li class="nav-item">
-                    <a class="nav-link side-item active" href="#home"><i class="fa-solid  fs-5  fa-house"></i>
-                        Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link side-item " href="#about"><i class="fa-solid fs-5  fa-user"></i> About </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link side-item " href="#services">
-                        <div class="d-flex">
-                            <i class="fa-solid fs-5 position-absolute py-2  fa-hand-holding"></i>
-                            <i class="fa-solid px-1 fs-6 fa-gears"></i>
-                        </div> Services
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link side-item " href="#projects"><i class="fa-solid fs-5  fa-grip"></i> Projects
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link side-item " href="#contact"><i class="fa-solid fs-5  fa-address-book"></i>
-                        Contact </a>
-                </li>
-            </ul>
-        </div>
-    </section>
-
     <div class="sections">
 
         <div class="page-1" id="home">
-            <nav class="navbar navbar-dark">
-                <div class="container-fluid d-flex justify-content-between">
-                    <a class="navbar-brand  px-4 fs-1" href="#home">M . Ata</a>
-                    <div class="theme px-3  py-2 rounded-5">
-                        <i class="fa-solid fs-4 visually-hidden fa-sun"></i>
-                        <i class="fa-solid fs-4 fa-moon"></i>
+            <nav class="navbar navbar-expand-md navbar-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand px-4 fs-1" href="#home">M . Ata</a>
+                    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="toggle-btn" role="button">
+                            <i class="fa-solid fa-bars"></i>
+                            <i class="fa-solid fa-bars-staggered visually-hidden"></i>
+                        </span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavId">
+                        <ul class="navbar-nav me-auto px-md-2 px-4 mt-2 mt-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link fs-5 active" href="#home" aria-current="page">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link fs-5" href="#about">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link fs-5" href="#services">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link fs-5" href="#projects">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link fs-5" href="#contact">Contact</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav ms-md-auto mt-2 mt-lg-0">
+                            <li class="theme px-3 fs-5 ms-auto py-2 rounded-5">
+                                <span>Dark
+                                    <i class="fa-solid px-2 fs-4 fa-moon"></i>
+                                </span>
+                                <span class="visually-hidden">Light
+                                    <i class="fa-solid px-2 fs-4 fa-sun"></i>
+                                </span>
+                            </li>
+                        </ul>
+
                     </div>
                 </div>
             </nav>
 
-            <div class="container  home mt-5">
+            <div class="container home mt-5">
                 <div class="row d-flex flex-md-nowrap align-items-center justify-content-center mx-5 my-5  ">
                     <div
                         class="col-lg-7 col-md-7 mb-5 col-12 text-center d-flex justify-content-center home-content mt-5">
@@ -104,13 +108,16 @@
                 </div>
                 <div class="social text-center mt-0 gy-0">
                     <div class="px-3 my-2">
-                        <a href="https://github.com/Mostafa3ta" class="email-col" target="_blank" rel='noopener noreferrer'><i
+                        <a href="https://github.com/Mostafa3ta" class="email-col" target="_blank"
+                            rel='noopener noreferrer'><i
                                 class="fa-brands secondery-text secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-github"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/mostafa-mahmoud-33a1542b0" class="email-col" target="_blank" rel='noopener noreferrer'><i
+                        <a href="https://www.linkedin.com/in/mostafa-mahmoud-33a1542b0" class="email-col"
+                            target="_blank" rel='noopener noreferrer'><i
                                 class="fa-brands secondery-text secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-linkedin-in"></i>
                         </a>
-                        <a href="https://wa.me/+201206856251" class="email-col" target="_blank" rel='noopener noreferrer'><i
+                        <a href="https://wa.me/+201206856251" class="email-col" target="_blank"
+                            rel='noopener noreferrer'><i
                                 class="fa-brands secondery-text secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-whatsapp"></i>
                         </a>
                     </div>
@@ -136,7 +143,8 @@
                     <div class="col-md-8 col-md-8 mt-5 col-12 text-start d-flex justify-content-center">
                         <div class="title my-1 col-lg-8 col-md-10 col-12 text-center m-auto">
                             <!-- <span class="fs-3">Brief</span> -->
-                            <p class="fs-6 py-3 ">Graduated from faculty of Computers and Artificial intelligence Helwan University
+                            <p class="fs-6 py-3 ">Graduated from faculty of Computers and Artificial intelligence Helwan
+                                University
                                 in June 2023, with deep knowledge in Computer Science and related fields,
                                 and I specialized in Web Development, After graduation I took
                                 certified Frontend React.js course, learned Next.js as well
@@ -203,21 +211,30 @@
                     <h2>Projects</h2>
                     <h3 class=" position-absolute mt-3 fs-1"><span class="secondery-text"> My </span> Projects</h3>
                 </div>
-                <div class="row col-11 d-flex align-items-center justify-content-center m-auto ">
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                <div class="project-types text-center mb-4">
+                    <button type="button" class="btn btn-dark  active">All</button>
+                    <button type="button" class="btn btn-dark ">React.js</button>
+                    <button type="button" class="btn btn-dark ">Next.js</button>
+                    <button type="button" class="btn btn-dark ">HTML CSS JS</button>
+                </div>
+                <div class="projects row col-11 d-flex align-items-center justify-content-center m-auto ">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="React.js">
                         <img src="images/e-commerce-4.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain rounded-3"></div>
                         <div class="content w-100  text-center">
                             <h7 class="bg-dark rounded-3  py-1 my-2 w-25 m-auto">React.js</h7>
                             <h4 class="my-2">E-commerce</h4>
-                            <a href="https://e-commerce-react-js-gamma.vercel.app/" target="_blank" rel='noopener noreferrer'>
+                            <a href="https://e-commerce-react-js-gamma.vercel.app/" target="_blank"
+                                rel='noopener noreferrer'>
                                 <button class="btn border-0">Show Demo
                                     <i class="fa-solid hover-ico ms-2 fa-up-right-from-square"></i>
                                 </button>
                             </a>
                         </div>
                     </div>
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="Next.js">
                         <img src="images/movies.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
@@ -230,7 +247,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="HTML CSS JS">
                         <img class="rounded-3 profile-project w-100 project-img" src="images/profile-light.png" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
@@ -247,7 +265,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="React.js">
                         <img src="images/ToDo-List.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain rounded-3"></div>
                         <div class="content w-100  text-center">
@@ -260,7 +279,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="HTML CSS JS">
                         <img src="images/Bookmarker2.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
@@ -277,7 +297,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="HTML CSS JS">
                         <img src="images/weather.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
@@ -294,7 +315,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 ">
+                    <div class="project-contain  my-3 rounded-3 col-lg-4 col-md-6 col-10 show-project "
+                        data-text="HTML CSS JS">
                         <img src="images/bakery.png" class="rounded-3 w-100 project-img" alt="">
                         <div class="content-contain"></div>
                         <div class="content w-100  text-center">
@@ -311,6 +333,11 @@
                         </div>
                     </div>
                 </div>
+                <!-- <div class="text-center mt-2" data-text="All">
+                    <button type="button" class="btn btn-second btn-light my-3 mx-2">Show More
+                        <i class="fa-solid ms-2 fa-angle-double-down"></i>
+                    </button>
+                </div> -->
             </div>
         </div>
 
@@ -373,10 +400,12 @@
                                     class="email-col" target="_blank" rel='noopener noreferrer'><i
                                         class="fa-brands  secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-instagram"></i>
                                 </a>
-                                <a href="https://wa.me/+201206856251" class="email-col" target="_blank" rel='noopener noreferrer'><i
+                                <a href="https://wa.me/+201206856251" class="email-col" target="_blank"
+                                    rel='noopener noreferrer'><i
                                         class="fa-brands  secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-whatsapp"></i>
                                 </a>
-                                <a href="https://github.com/Mostafa3ta" class="email-col" target="_blank" rel='noopener noreferrer'><i
+                                <a href="https://github.com/Mostafa3ta" class="email-col" target="_blank"
+                                    rel='noopener noreferrer'><i
                                         class="fa-brands  secondery-ico contact-ico p-2 fs-2 mx-1 rounded-5 fa-github"></i>
                                 </a>
                                 <a href="https://www.linkedin.com/in/mostafa-mahmoud-33a1542b0" class="email-col"
