--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                         </ul>
                         <ul class="navbar-nav ms-md-auto mt-2 mt-lg-0">
                             <li class="theme px-3 fs-5 ms-auto py-2 rounded-5">
-                                <span>Dark
+                                <span class="visually-hidden">Dark
                                     <i class="fa-solid px-2 fs-4 fa-moon"></i>
                                 </span>
-                                <span class="visually-hidden">Light
+                                <span>Light
                                     <i class="fa-solid px-2 fs-4 fa-sun"></i>
                                 </span>
                             </li>
