--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
 
 <body>
 
-
+    <div id="loading">
+        <div class="sk-cube-grid">
+            <div class="sk-cube sk-cube1"></div>
+            <div class="sk-cube sk-cube2"></div>
+            <div class="sk-cube sk-cube3"></div>
+            <div class="sk-cube sk-cube4"></div>
+            <div class="sk-cube sk-cube5"></div>
+            <div class="sk-cube sk-cube6"></div>
+            <div class="sk-cube sk-cube7"></div>
+            <div class="sk-cube sk-cube8"></div>
+            <div class="sk-cube sk-cube9"></div>
+        </div>
+    </div>
 
     <div class="sections">
 
@@ -53,10 +65,10 @@
                         </ul>
                         <ul class="navbar-nav ms-md-auto mt-2 mt-lg-0">
                             <li class="theme px-3 fs-5 ms-auto py-2 rounded-5">
-                                <span class="visually-hidden">Dark
+                                <span>Dark
                                     <i class="fa-solid px-2 fs-4 fa-moon"></i>
                                 </span>
-                                <span>Light
+                                <span class="visually-hidden">Light
                                     <i class="fa-solid px-2 fs-4 fa-sun"></i>
                                 </span>
                             </li>
